--- a/aboutus.html
+++ b/aboutus.html
@@ -1,1 +1,8 @@
-<p>This is about him</p>
+<html>
+  <header style = "background-colour:grey;">
+    <h1>About Us </h1>
+  </header>
+  <body>
+    <p>This is about him</p>
+  </body>
+</html>
